force-app/main/default/objects/nome_tipo_voo__mdt/nome_tipo_voo__mdt.object-meta.xml
<CustomObject>
    <description>Utilizado para armazenar os ids do Sistema OSS relativos a Nome Tipo Voo.</description>
    <label>nome tipo voo</label>
    <pluralLabel>nomes tipos voo</pluralLabel>
</CustomObject>