force-app/main/default/objects/nome_tipo_voo__mdt/fields/id_OOS__c.field-meta.xml
<CustomField>
    <fullName>id_OOS__c</fullName>
    <label>id_OOS</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>