force-app/main/default/objects/nome_tipo_voo__mdt/fields/nome_tipo_voo__c.field-meta.xml
<CustomField>
    <fullName>nome_tipo_voo__c</fullName>
    <label>nome_tipo_voo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>