force-app/main/default/objects/nome_tipo_voo__mdt/fields/voo_Tipo_SF__c.field-meta.xml
<CustomField>
    <fullName>voo_Tipo_SF__c</fullName>
    <label>voo Tipo SF</label>
    <length>255</length>
    <type>Text</type>
</CustomField>